# spotflow

./: .coveragerc  .gitignore  .spotflow.ini  LICENSE  README.md  confspotflow.cfg  get-started.md  pyproject.toml  readme.md  requirements.txt  spotflow.cfg  spotflow_after.py  spotflow_script.py
examples/: etc.py  examples.py  examples_api.py  examples_api_monitor.py  examples_api_monitor_unittest_module.py  examples_api_monitor_unittest_testcase.py  examples_api_pretty_print.py  examples_api_spotflow.py  examples_cmd_line.py  examples_cmd_line.sh  examples_cmd_line.txt  examples_func.py  examples_html.py  examples_live.py  examples_live_func.py  examples_mining.py  examples_polarity.py  examples_pytest.py  examples_scripts.py  examples_txt.py  examples_unittest.py  miner.py  mining_gzip.py  mining_polarity.py  mining_python_lib.py  mining_python_libs.py  playground_analysis.py  playground_html.py  playground_old.py  playground_txt.py  run_pytest.py  spotflow_var_dataset.py  tests.py
happyflow/: __main__.py  analysis.py  api.py  cmdline.py  collector.py  comparator.py  flow.py  flow_state.py  html_report.py  info.py  loader.py  model.py  playground.py  report.py  report_csv.py  report_html.py  report_txt.py  runner.py  sample.py  sut_flow_state.py  sut_loader.py  sut_model.py  sut_tracer.py  target.py  target_loader.py  target_model.py  test_loader.py  trace2.py  trace_inspect.py  trace_runner.py  tracer.py  txt_report.py  utils.py
lab/: bptesting.py  bptesting_run.py  etc.py  examples_cmd_line.py  examples_live.py  lab.py  polarity.py  polarity_run.py  run_polarity.py  test_loader.py
mining_scripts/: arguments.py  basics.py  exceptions.py  polarity.py  returns.py  spotflow_miner.py  spotflow_report.py  tests.py
scripts/: basics.py  exceptions.py  polarity.py  returns.py  run.sh  spotflow_report.py  tests.py
spotflow/: __main__.py  api.py  cmdline.py  collector.py  info.py  model.py  polarity.py  pprint.py  report.py  report_csv.py  report_html.py  report_pprint.py  report_txt.py  sample.py  tracer.py  unittest_utils.py  utils.py  utils_html.py  utils_pytest.py  utils_unittest.py
tests/: stub_funcs.py  stub_sut.py  stub_test.py  test_arg.py  test_arg_return.py  test_args_return.py  test_basic_calls.py  test_basic_flows.py  test_comparator.py  test_e2e.py  test_exception.py  test_flow.py  test_func_decorator.py  test_generator.py  test_html_report.py  test_inheritance.py  test_list_compr.py  test_list_comprehension.py  test_local_class.py  test_local_func.py  test_recursion.py  test_report_csv.py  test_report_html.py  test_report_txt.py  test_return.py  (+4 more)
(+145 files in other folders)
