[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotflow"
version = "1.0.0"
description = "Runtime analysis for Python programs"
authors = [
  { name="Andre Hora", email="andrehoraa@gmail.com" },
]
license = "MIT"
readme = "README.md"
keywords = ["dynamic-analysis", "testing"]
requires-python = ">=3.8"
dependencies = [
  'coverage == 6.5.0',
  'pytest',
  'pygments'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/andrehora/spotflow"
"Bug Tracker" = "https://github.com/andrehora/spotflow/issues"