[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotflow"
version = "1.1.0"
description = "Runtime analysis for Python programs"
authors = [
  { name="Andre Hora", email="andrehoraa@gmail.com" },
]
license = "MIT"
readme = "README.md"
keywords = ["dynamic-analysis", "testing"]
requires-python = ">=3.7"
dependencies = [
  'coverage == 6.5.0',
  'pytest',
  'pygments'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing"
]

[project.urls]
"Homepage" = "https://github.com/andrehora/spotflow"
"Bug Tracker" = "https://github.com/andrehora/spotflow/issues"